--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,12 @@
   --secondary-font: Raleway, sans-serif;
   --accent-color: #2196f3;
 }
+a {
+text-decoration: none;
+}
+ul {
+list-style: none;
+}
 
 body {
   font-family: var(--main-font);
@@ -43,6 +49,8 @@ body {
 }
 
 .site-nav .nav-list-link.is-current,
+.nav-list-link:hover,
+.nav-list-link:focus,
 .header-mail:hover,
 .header-mail:focus,
 .header-phone:hover,
@@ -174,14 +182,14 @@ font-size: 16px;
 line-height: 1.625;
 text-align: center;
 letter-spacing: 0.03em;
-color: #FFFFFF; 
-background-color: #2196f3;
+color: #212121; 
+background-color: #F5F4FA;
 }
 
 .portfolio-button:hover,
 .portfolio-button:focus {
-color: #212121; 
-background-color: #F5F4FA;
+color: #FFFFFF; 
+background-color: #2196f3;
 }
 
 .portfolio-project {
